# middle-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  setup.cfg
admin-service/: Dockerfile  README.md  pyproject.toml
admin-service/.env/: .env.sample
admin-service/entrypoint/: entrypoint.sh
admin-service/src/config/: settings.py
admin-service/src/config/components/: database.py
admin-service/src/movies/: admin.py  apps.py  forms.py  models.py  signals.py
admin-service/src/movies/api/: urls.py
admin-service/src/movies/migrations/: 0001_initial.py  0002_alter_filmwork_add_file_path_and_certificate_fields.py  0003_alter_filmwork_remove_file_path_and_certificate_fields.py  0004_alter_filmwork_add_file_path_field.py  0005_alter_models_fix_null_fields.py  0007_alter_filmwork_created_alter_filmwork_modified_and_more.py
asyncapi-service/: Dockerfile  Makefile  pyproject.toml
asyncapi-service/.env/: .env.sample
asyncapi-service/entrypoint/: entrypoint.sh
asyncapi-service/src/: main.py
asyncapi-service/src/api/v1/: films.py  genres.py  persons.py  tools.py
asyncapi-service/src/core/: config.py  utils.py
asyncapi-service/src/core/constants/: exception_details.py
asyncapi-service/src/db/cache/: __init__.py  base.py  redis.py
asyncapi-service/src/db/storage/: __init__.py  base.py  elastic.py
asyncapi-service/src/models/: __init__.py  base.py  film.py  genre.py  person.py
asyncapi-service/src/services/: es_queries.py  film.py  genre.py  person.py
asyncapi-service/tests/: docker-compose-test.yml
asyncapi-service/tests/.env/: .env.sample
asyncapi-service/tests/fixtures/: common.py  elasticsearch.py  redis.py
asyncapi-service/tests/functional/: conftest.py  settings.py
asyncapi-service/tests/functional/src/: test_films.py  test_search.py  tools.py
asyncapi-service/tests/functional/testdata/: data_to_elastic.py  es_mapping.py
asyncapi-service/tests/functional/utils/: wait_for_es.py  wait_for_redis.py
authapi-service/: Dockerfile  Makefile  pyproject.toml  requirements.txt
authapi-service/.env/: .env.sample
authapi-service/entrypoint/: entrypoint.sh
authapi-service/src/: alembic.ini  app_utils.py  asgi.py  custom_asgi.py  extentions.py  main.py  wsgi.py
authapi-service/src/alembic/: env.py
authapi-service/src/alembic/versions/: 94fe531a04ea_added_initial_table.py
authapi-service/src/api/v1/: auth.py  role.py
authapi-service/src/cache/: __init__.py  base.py  redis.py
authapi-service/src/core/: config.py  constants.py  oauth_service.py  oauth_settings.py  tracer.py  utils.py
authapi-service/src/core/in_models/: auth.py  base.py  permission.py  role.py  role_permission.py  user.py  user_role.py
authapi-service/src/core/out_models/: auth.py  base.py  permission.py  role.py  role_permission.py  user.py  user_role.py
authapi-service/src/db/core/: __init__.py
authapi-service/src/db/models/: base.py  permissions.py  roles.py  social_account.py  users.py
authapi-service/src/db/services/: __init__.py  auth_history.py  base.py  permissions.py  role.py  role_permission.py  social_account.py  user.py  user_role.py  userdata.py
authapi-service/src/models/: __init__.py  base.py  database.py  permissions.py  roles.py  users.py
authapi-service/src/utils/: password_generator.py  update_email.py
authapi-service/tests/: conftest.py  docker-compose-test.yml
authapi-service/tests/fixtures/: cache.py  common.py  database.py  pg_database.py
authapi-service/tests/functional/: conftest.py  settings.py
data-faker-service/: pyproject.toml
data-faker-service/.env/: .env.sample
data-faker-service/entrypoint/: entrypoint.sh
data-faker-service/src/: config.py  queries.py  runner.py
etl-kafka-clickhouse/: pyproject.toml
etl-kafka-clickhouse/src/core/: config.py
etl-service/: .gitignore  Dockerfile  pyproject.toml
etl-service/src/core/: logger.py
etl-service/src/queries/: genres.py  persons.py
fastapi/: Makefile  pyproject.toml
fastapi/.env/: .env.sample
fastapi/src/core/: utils.py
fastapi/src/services/: person.py
fastapi/tests/.env/: .env.sample
fastapi/tests/functional/: settings.py
notifications-service/: Dockerfile  pyproject.toml
notifications-service/.env/: .env.sample
notifications-service/src/: main.py
notifications-service/src/core/: config.py
notifications-service/src/utils/: schedule.py
notifications-worker-service/: Dockerfile  pyproject.toml
notifications-worker-service/.env/: .env.sample
notifications-worker-service/src/consumer/: __init__.py  protocol.py
notifications-worker-service/src/core/: settings.py
notifications-worker-service/src/databases/: __init__.py  clickhouse.py  mongo.py  postgres.py  rabbitmq.py
notifications-worker-service/src/handlers/: __init__.py  event_handler.py  message_handler.py  protocol.py
notifications-worker-service/src/models/: broker.py  movies.py  user_activities.py  users.py
notifications-worker-service/src/repositories/: __init__.py  broker.py  likes.py  movie_users.py  movies.py  review.py  users.py
notifications-worker-service/src/utils/: aiomailing.py  aiosmtp.py  exceptions.py
notifications-worker-service/src/worker/: event_worker.py  message_worker.py
ugc-etl/: Dockerfile  pyproject.toml
ugc-etl-service/: Dockerfile  pyproject.toml
ugc-etl-service/.env/: .env.sample
ugc-etl-service/src/: main.py
ugc-etl-service/src/clients/: clickhouse.py  kafka_faust.py
ugc-etl-service/src/core/: config.py
ugc-etl-service/src/models/: ch_query.py
ugc-etl/.env/: .env.sample
ugc-etl/src/: main.py
ugc-etl/src/clients/: kafka.py
ugc-etl/src/core/: config.py
ugc-etl/src/models/: view.py
ugc-etl/src/transform/: __init__.py
ugc-service/: Dockerfile  Makefile  pyproject.toml
ugc-service/.env/: .env.sample
ugc-service/src/: main.py
ugc-service/src/core/: config.py  utils.py
ugc-service/src/services/: __init__.py  base.py  events.py  kafka.py
ugc-service/tests/: conftest.py
ugc-service/tests/fixtures/: common.py  fastapi.py  kafka.py
ugc-service/tests/utils/: tools.py
(+196 files in other folders)
