[tool.poetry]
name = "authapi-service"
version = "0.1.0"
description = ""
authors = ["Ruslan Filichkin <ruslan.filichkin@gmail.com>"]
readme = "README.md"
packages = [{include = "authapi_service"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.8.1"
Flask = {extras = ["async"], version = "2.2.2"}
Flask-JWT-Extended = "4.4.4"
pydantic = "1.10.2"
SQLAlchemy = "1.4.41"
psycopg2-binary = "^2.9.3"
uvicorn = "0.18.3"
gunicorn = "20.1.0"
bcrypt = "4.0.0"
flake8 = "5.0.4"
python-dotenv = "0.21.0"
gevent = "^21.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
