[tool.poetry]
name = "authapi-service"
version = "0.1.0"
description = ""
authors = ["Ruslan Filichkin <ruslan.filichkin@gmail.com>"]
readme = "README.md"
packages = [{include = "authapi_service"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.8.1"
Flask = {extras = ["async"], version = "2.2.2"}
Flask-JWT-Extended = "4.4.4"
pydantic = "1.10.2"
SQLAlchemy = "1.4.41"
psycopg2-binary = "^2.9.3"
uvicorn = "0.18.3"
gunicorn = "20.1.0"
bcrypt = "4.0.0"
flake8 = "5.0.4"
python-dotenv = "0.21.0"
gevent = "21.12.0"
orjson = "3.8.0"
pytest = "7.1.3"
multidict = "6.0.2"
isort = "5.10.1"
autopep8 = "1.7.0"
mypy = "0.971"
redis = "4.3.4"
PyJWT = "2.5.0"
flake8-print = "5.0.0"
Authlib = "1.0.1"
requests = "2.28.1"
opentelemetry-api = "1.11.1"
opentelemetry-sdk = "1.11.1"
opentelemetry-instrumentation-flask = "0.30b1"
opentelemetry-exporter-jaeger = "1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
