[tool.poetry]
name = "authapi-service"
version = "0.1.0"
description = ""
authors = ["Ruslan Filichkin <ruslan.filichkin@gmail.com>"]
readme = "README.md"
packages = [{include = "authapi_service"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.8.1"
Flask = {extras = ["async"], version = "2.2.2"}
Flask-JWT-Extended = "4.4.4"
pydantic = "1.10.2"
SQLAlchemy = "1.4.41"
psycopg2-binary = "^2.9.3"
uvicorn = "0.18.3"
gunicorn = "20.1.0"
bcrypt = "4.0.0"
flake8 = "5.0.4"
flake8-bugbear = "^22.6.22"
flake8-commas = "^2.1.0"
flake8-eradicate = "^1.3.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.2"
flake8-variables-names = "^0.0.5"
pre-commit = "^2.19.0"
dlint = "^0.13.0"
python-dotenv = "0.21.0"
gevent = "21.12.0"
orjson = "3.8.0"
pytest = "7.1.3"
multidict = "6.0.2"
isort = "5.10.1"
autopep8 = "1.7.0"
mypy = "0.971"
redis = "4.3.4"
PyJWT = "2.5.0"
Authlib = "1.0.1"
requests = "2.28.1"
opentelemetry-api = "1.11.1"
opentelemetry-sdk = "1.11.1"
opentelemetry-instrumentation-flask = "0.30b1"
opentelemetry-exporter-jaeger = "1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
