[tool.poetry]
name = "data-faker"
version = "0.1.0"
description = ""
authors = ["Ruslan Filichkin <ruslan.filichkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "2.9.3"
pydantic = "1.9.1"
python-dotenv = "0.20.0"
Faker = "^14.1.0"
flake8 = "^5.0.4"
autopep8 = "^1.7.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
