[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Ruslan Filichkin <ruslan.filichkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "5.0.3"
isort = "5.10.1"
autopep8 = "1.6.0"
pytest = "7.1.2"
pre-commit = "2.20.0"
python-dotenv = "0.20.0"
pydantic = "1.9.1"
psycopg2-binary = "2.9.3"
elasticsearch = "7.7.0"
mypy = "0.971"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
my-script = "new-admin-panel-sprint-3.01_etl.runner:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
