[tool.poetry]
name = "notifications-worker-service"
version = "0.1.0"
description = ""
authors = ["kenki <ilsafganiev2222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
asynch = "^0.2.2"
asyncpg = "^0.27.0"
motor = "^3.1.1"
sendgrid = "^6.9.7"
aio-pika = "^8.2.5"
orjson = "^3.8.2"

[tool.poetry.dev-dependencies]
flake8-bugbear = "^22.6.22"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.2"
flake8-variables-names = "^0.0.5"
pre-commit = "^2.19.0"
dlint = "^0.13.0"
black = "^22.6.0"
isort = "^5.10.1"
yesqa = "^1.4.0"
flake8 = "^5.0.4"
mypy = "^0.982"
autopep8 = "1.7.0"
motor-stubs = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
