[tool.poetry]
name = "ugc-etl"
version = "0.1.0"
description = ""
authors = ["Maria Karaseva <maria-karasevaa@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.1.2"
python-dotenv = "0.20.0"
pydantic = "1.10.2"
psycopg2-binary = "2.9.3"
elasticsearch = "7.7.0"
mypy = "0.971"
kafka-python = "2.0.2"
faust-streaming = "0.9.0"
asynch = "0.2.1"
backoff = "2.2.1"
flake8-bugbear = "^22.6.22"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.2"
flake8-variables-names = "^0.0.5"
pre-commit = "^2.19.0"
dlint = "^0.13.0"
black = "^22.6.0"
isort = "^5.10.1"
yesqa = "^1.4.0"
flake8 = "^5.0.4"
autopep8 = "1.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
