[tool.poetry]
name = "ugc-etl"
version = "0.1.0"
description = ""
authors = ["Maria Karaseva <maria-karasevaa@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.1.2"
pre-commit = "2.20.0"
python-dotenv = "0.20.0"
pydantic = "1.10.2"
psycopg2-binary = "2.9.3"
elasticsearch = "7.7.0"
mypy = "0.971"
kafka-python = "2.0.2"
faust-streaming = "0.9.0"
asynch = "0.2.1"
backoff = "2.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
